snapshots/aws_instance_multiple_interface/aws_configs/us-east-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-050fee0598c02411d",
     "NetworkAclId": "acl-09398beb712bdfe28",
     "SubnetId": "subnet-0a6e12920fe950a84"
    },
    {
     "NetworkAclAssociationId": "aclassoc-069d855ae0c1321de",
     "NetworkAclId": "acl-09398beb712bdfe28",
     "SubnetId": "subnet-0122bf91577a78f00"
    },
    {
     "NetworkAclAssociationId": "aclassoc-0acb277d467f35d17",
     "NetworkAclId": "acl-09398beb712bdfe28",
     "SubnetId": "subnet-0c899584f5d8197f8"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 1000
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-09398beb712bdfe28",
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "multi_iface_general"
    }
   ],
   "VpcId": "vpc-069b746b1b02a1cc1"
  },
  {
   "Associations": [],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-05e05ca97987ff9fd",
   "OwnerId": "028403472736",
   "Tags": [],
   "VpcId": "vpc-069b746b1b02a1cc1"
  }
 ]
}
